@@ -1,5 +1,8 @@
+bzr-20100705
++ splines for tail of coulomb-potential
+
 bzr-20100702
-+ monopole enhancement done, seems to work
++ monopole enhancement done
 
 bzr-20100630
 + dipole output
